check style done